--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
     padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 body{
-   /*  */
    color: black;
 }
+
 
 .global-width{
     max-width: 1260px;
@@ -41,6 +44,15 @@ body{
     display: flex;
     list-style-type: none;
     gap: 20px;
+    color: white;
+}
+.head-right ul li a{
+    color: white;
+    text-decoration: none;
+}
+
+.head-right ul li a:hover{
+    color: #00bfff;
 }
 
 section{
@@ -173,10 +185,20 @@ section{
 .about-container a{
         border: 2px solid rgb(13, 13, 101);
     border-radius: 30px;
-    padding: 8px 40px;
+    padding: 15px 30px;
     text-decoration: none;
-    cursor: pointer; 
+    cursor: pointer;
+    background-color: white; 
     color: black;
+    font-size: 20px;
+    line-height: 0;
+    box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .3);
+}
+
+.about-container a:hover{ 
+    background-color: #002e5f;
+    color: white;
+    letter-spacing: 2px;
 }
 
 .service-background{
@@ -456,6 +478,10 @@ section{
     font-size: 18px;
 }
 
+.contact-form:hover{
+    border: 2px solid black;
+}
+
 .get-in-touch-right textarea{
         height: 130px;
         border-radius: 20px !important;
@@ -464,5 +490,223 @@ section{
     width: 30%;
     padding: 10px;
     font-size: 20px;
-    border-radius: 50px;
+    border-radius: 80px;
+    cursor: pointer;
+}
+.contact-form-submit:hover{
+    background-color: black;
+    color: white;
+}
+.faq-section{
+    background-image: url('faq-background.png');
+    background-color: #333;
+    padding: 100px 10px;
+}
+
+.faq-head{
+    text-align: center;
+    font-size: 30px;
+    color: white;
+}
+
+.faq-container {
+  width: 60%;
+  margin: auto;
+}
+
+.faq-item {
+  background: #00bfff;
+  margin: 10px 0;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.faq-question {
+  font-size: 18px;
+  font-weight: bold;
+  color: #222;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.faq-question p{
+    padding: 20px;
+}
+
+.faq-question span {
+  padding: 15px 20px;
+  background-color: #333;
+  color: rgb(255, 255, 255);
+  font-size: 22px;
+  font-weight: bold;
+  transition: transform 0.3s;
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+}
+
+.faq-answer {
+  max-height: 0;
+  overflow: hidden;
+  background: #fff;
+  color: #333;
+  padding: 0 20px;
+  transition: max-height 0.4s ease, padding 0.4s ease;
+}
+
+.faq-item.active .faq-answer {
+  max-height: 200px; /* adjust height */
+  padding: 15px 20px;
+}
+
+.faq-item.active .faq-question span {
+    margin: 10px;
+    transform: rotate(225deg); /* + becomes × */
+    clip-path: circle(50% at 50% 50%);
+}
+
+@media (max-width:1024px){
+       .faq-container {
+             width: 80%;
+             margin: auto;
+        }
+}
+
+.footer-container{
+    background-color: #002e5f;
+    color: white;
+}
+.footer-container h1{
+    font-size: 20px;
+}
+
+.foot h1{
+    font-size: 19px;
+    font-weight: 600;
+}
+
+.foot{
+   display: grid;
+   grid-template-columns: repeat(4,1fr);
+   justify-content: space-between;
+   padding: 60px 20px;
+}
+
+.foot h1{
+    border-bottom: 2px solid white;
+    padding-bottom: 5px;
+    width: 130px;
+    column-gap: 8px;
+}
+
+.foot p{
+    border-bottom: 2px solid white;
+    padding-bottom: 5px;
+    width: 90%;
+    column-gap: 8px;
+}
+
+.foot h5{
+    font-size: 30px;
+}
+
+.foot h6{
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 500;
+}
+
+.foot a{
+    color: white;
+}
+
+.contact-page{
+    display: flex;
+    gap: 10px;
+}
+
+.contact-page svg{
+        padding: 10px;
+    background: white;
+    color: #00bfff;
+}
+
+.flex-box{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+}
+
+.subscribe-box{
+    display: flex;
+}
+
+.subscribe-box h4{
+    display: flex;
+    background-color: white;
+    color: black;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    font-size: 12px;
+}
+
+.subscribe-box a{
+    color: black;
+    text-decoration: none;
+}
+.subscribe-box input{
+    background-color: #002e5f;
+    border: 1px solid white;
+    padding: 5px;
+    width: 60%;
+    color: white;
+}
+
+@media (max-width:1024px){
+    .foot{
+        grid-template-columns: repeat(2,1fr);
+        padding-left: 50px;
+        padding-right: 50px;
+        gap: 30px;
+    }
+}
+@media (max-width:768px){
+    .foot{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+.bottom{
+    text-align: start;
+    background-color: rgb(52, 51, 51);
+    color: white;
+    padding: 30px;
+    font-size: 15px;
+}
+
+.bottom h4{
+    font-weight: 100;
+}
+
+/* back to top */
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #00bfff;
+  color: #fff;
+  font-size: 24px;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+  display: none; /* hidden at start */
+  transition: opacity 0.3s, transform 0.3s;
+}
+
+.back-to-top:hover {
+  background: #009acd;
+  transform: scale(1.1);
 }
