--- a/style.css
+++ b/style.css
@@ -235,6 +235,8 @@ section{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    transition: transform 0.6s ease;
+    
 }
 
 @media (max-width:1155px){
@@ -251,6 +253,8 @@ section{
 
 .box:hover{
         background: linear-gradient(to bottom right, #66ffcc 0%, #ffccff 100%);
+        transform: skewX(5deg); 
+
 }
 
 .box svg{
